remove typo, align tests with actual values
Signed-off-by: ac892247 <a.chmelo@gmail.com>